--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="capture_button_text">Capture</string>
+    <string name="friends_list">Friends List</string>
+    <string name="statistics">Statistics</string>
+    <string name="leaderboards">Leaderboards</string>
+    <string name="settings">Settings</string>
+    <string name="google_app_id">idyllic-kiln-128415</string>
 </resources>
