--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="add_friends">Add Friend</string>
 
     <string name="prompt_name">Username</string>
     <string name="prompt_email">Email</string>
