--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Flag Runners</string>
-
+    <string name="google_app_id">idyllic-kiln-128415</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="capture_button_text">Capture</string>
 
     <string name="action_settings">Settings</string>
     <string name="add_friends">Add Friend</string>
@@ -12,4 +14,9 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign In</string>
     <string name="action_register">Register New Player</string>
+
+    <string name="friends_list">Friends List</string>
+    <string name="statistics">Statistics</string>
+    <string name="leaderboards">Leaderboards</string>
+
 </resources>
