--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
 
     <string name="password">Password</string>
     <string name="cancel">Cancel</string>
+    <string name="no_friends">-empty-</string>
 </resources>
